# profile_t

./: .Rhistory  Changelog  LICENSE  Puromycin_least_squares  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  genindex.html  search.html
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  index.html  objects.inv  py-modindex.html  searchindex.js
docs/_sources/: index.rst.txt
examples/: .RData  .Rhistory  DemoBOD.py  DemoPuromycin.py  OptPuromycin.py  PI.r  mapiePu.py
profile_t/: __init__.py  either.py  likelihoods.py  plots.py  symbolic_expression.py  symexpr.py
tests/: test_profile.py
